<resources>
    <string name="app_name">BSUIRCalc</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="bkt1">(</string>
    <string name="bkt2">)</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="solve">SOLVE</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="power">^</string>
    <string name="delete">←</string>
    <string name="deleteAll">C</string>
</resources>